[tool.poetry]
name = "experiments-2026-ACSOS-CL-for-nodes-movement-in-CAS"
version = "0.1.0"
description = ""
authors = ["Davide Domini <davide.domini@unibo.it>"]
readme = ""

packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
phyelds = "^5.0.0"
profed = "0.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"